<resources>
    <string name="app_name">Sport Diary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Exercises">Exercises</string>
    <string name="cancel">Cancel</string>
    <string name="options">⋮</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="addExercise">New Exercise</string>
    <string name="updateExercise">Update Exercise</string>
    <string name="unique_err">This name already exists. Please choose another one.</string>
    <string name="Zones">Zones</string>
    <string name="addZone">New Zone</string>
    <string name="updateZone">Update Zone</string>
    <string name="diaries">Diaries</string>
    <string name="new_diary">New Diary</string>
    <string name="name">Name</string>
    <string name="start">Season start</string>
    <string name="date_format_err">Date format is dd.mm.yyyy.</string>
    <string name="save">Save</string>
    <string name="update_diary">Update Diary</string>
    <string name="Trainings">Trainings</string>
    <string name="Tests">Tests</string>
    <string name="Questionnaire">Questionnaire</string>
    <string name="Rest">Rest</string>
    <string name="Information">Information</string>
    <string name="aims">Aims</string>
    <string name="equipment">Equipment</string>
    <string name="times">Times</string>
    <string name="training_places">Training places</string>
    <string name="borg_ratings">Borg ratings</string>
    <string name="addAim">New aim</string>
    <string name="updateAim">Update aim</string>
    <string name="addEquipment">New equipment</string>
    <string name="updateEquipment">Update Equipment</string>
    <string name="addTime">New time</string>
    <string name="updateTime">Update time</string>
    <string name="addTrainingPlace">New training place</string>
    <string name="updateTrainingPlace">Update training place</string>
    <string name="addBorgRating">New rating</string>
    <string name="updateBorgRating">Update rating</string>
    <string name="time">Time</string>
    <string name="training_place">Training place</string>
    <string name="borg_rating">Borg rating</string>
    <string name="addTraining">New training</string>
    <string name="updateTraining">Update training</string>
    <string name="select">Please select!</string>
    <string name="exercises_to_training">Exercises to training</string>
    <string name="capacity">Capacity</string>
    <string name="styles">Styles</string>
    <string name="addStyle">New style</string>
    <string name="updateStyle">Update style</string>
    <string name="tempos">Tempos</string>
    <string name="addTempo">New tempo</string>
    <string name="updateTempo">Update tempo</string>
    <string name="Exercise">Exercise</string>
    <string name="style">Style</string>
    <string name="tempo">Tempo</string>
    <string name="zone">Zone</string>
    <string name="note">Note</string>
    <string name="time_min">Time(min.)</string>
    <string name="work_rest">Work:rest</string>
    <string name="addExerciseToTraining">New exercise to training</string>
    <string name="updateExerciseToTraining">Update exercise to training</string>
    <string name="series_repeats_length">Series x Repeats x Length</string>
    <string name="x">x</string>
    <string name="double_dot">:</string>
    <string name="competitions">Competitions</string>
    <string name="addCompetition">New competition</string>
    <string name="updateCompetition">Update competition</string>
    <string name="competition">Competition</string>
    <string name="competition_schedule">Competition schedule</string>
    <string name="addImportance">New importance</string>
    <string name="updateImportance">Update importance</string>
    <string name="importance">Importance</string>
    <string name="blocks">Block</string>
    <string name="addBlock">New block</string>
    <string name="updateBlock">Update block</string>
    <string name="block">Block</string>
    <string name="stages">Stages</string>
    <string name="addStage">New stage</string>
    <string name="updateStage">Update stage</string>
    <string name="stage">Stage</string>
    <string name="types">Types</string>
    <string name="addType">New type</string>
    <string name="updateType">Update type</string>
    <string name="type">Type</string>
    <string name="camps">Camps</string>
    <string name="addCamp">New camps</string>
    <string name="updateCamp">Update camps</string>
    <string name="overall_plan">Overall plan</string>
    <string name="statistics">Statistics</string>
    <string name="no_diary_selected">Please choose the diary</string>
    <string name="lists_edit">Lists edit</string>
    <string name="competition_date">Competition date</string>
    <string name="competition_error">Please choose competition</string>
    <string name="week"> week</string>
    <string name="week_info">Week info</string>
    <string name="info_for">Info for </string>
    <string name="for_week"> week</string>
    <string name="update_week_info">Update week info</string>
    <string name="max_heart_rate">Max heart rate</string>
    <string name="resting_heart_rate">Resting heart rate</string>
    <string name="last_performance">Last performance</string>
    <string name="remove">Remove</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="sex">sex</string>
    <string name="before">Before approach</string>
    <string name="after">After approach</string>
    <string name="heart_rate">Heart rate</string>
    <string name="series">Series</string>
    <string name="repeat">Repeat</string>
    <string name="pulse">Pulse</string>
    <string name="measurements">Measurements</string>
    <string name="date_in_season">Date should be in this season</string>
    <string name="input">Input</string>
    <string name="draw">Draw</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="from_to_err">from date should be before to date</string>
    <string name="banister_model">Banister model</string>
    <string name="date">Date</string>
    <string name="performance">Performance</string>
    <string name="trimps_graph">Trimps graph</string>
    <string name="trimp">Trimp</string>
    <string name="initialize">Initialize</string>
    <string name="test">Tests</string>
    <string name="addTest">New Test</string>
    <string name="updateTest">Update Test</string>
    <string name="rest_places">Rest places</string>
    <string name="addRestPlace">New rest place</string>
    <string name="updateRestPlace">Update rest place</string>
    <string name="addRest">New rest</string>
    <string name="updateRest">Update rest</string>
    <string name="rest_place">Rest place</string>
    <string name="one_test">Test</string>
    <string name="no_test_err">Choose any test</string>
    <string name="dream_questionnaire">Dream questionnaire</string>
    <string name="san_questionnaire">SAN questionnaire</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="health">Health</string>
    <string name="activity">Activity</string>
    <string name="mood">Mood</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign out</string>
    <string name="disconnect">Disconnect</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="save_to_server">save to server</string>
    <string name="load_from_server">load from server</string>
    <string name="loading_data">Loading data from server...</string>
    <string name="makeTest">test diary</string>


</resources>
