<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_margin="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/training_exercise_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                app:srcCompat="@drawable/icons8_barbell_24"
                android:layout_alignParentStart="true" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/training_exercise_img">
                <TextView
                    android:id="@+id/exerciseText"
                    android:text="@string/Exercise"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/styleText"
                    android:text="@string/style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tempoText"
                    android:text="@string/tempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/zoneText"
                    android:text="@string/zone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/trainingExerciseCapacityText"
                    android:text="@string/capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/workToRestText"
                    android:text="@string/work_rest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/timeExerciseText"
                    android:text="@string/time_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/borgExerciseText"
                    android:text="@string/borg_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/noteText"
                    android:text="@string/note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/training_exercise_opts"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/options"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="12dp"
                android:textAppearance="?android:textAppearanceLarge" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>