<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_margin="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/training_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                app:srcCompat="@drawable/ic_menu_manage"
                android:layout_alignParentStart="true" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/training_img">
                <TextView
                    android:id="@+id/timeText"
                    android:text="@string/time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/placeText"
                    android:text="@string/training_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/aimText"
                    android:text="@string/aims"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/equipmentText"
                    android:text="@string/equipment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/borgText"
                    android:text="@string/borg_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/trainingCapacity"
                    android:text="@string/capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/training_opts"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/options"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="12dp"
                android:textAppearance="?android:textAppearanceLarge" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>